# AfelBot

./: .gitignore
Case/: Case.FCStd  bottomcase.stl  uppercase.stl
Jetson Nano/: AfelBotConfig.h.in  CMakeLists.txt  Jetson Nano.cpp  Jetson Nano.h  main.cu
Jetson Nano/AfelBot/: AfelBot.sln  AfelBot.vcxproj  kernel.cu
Linux Files/etc/: rc.local
Linux Files/home/pi/AfelBot/: camera
MotorDriver/: MotorDriver.ino
PowerBoard/: PowerBoard.lay6
PowerBoard/Gerber/: PowerBoard.DRL  PowerBoard_copper_bottom.gbr  PowerBoard_copper_top.gbr  PowerBoard_outline.gbr  PowerBoard_silkscreen_bottom.gbr  PowerBoard_silkscreen_top.gbr  PowerBoard_soldermask_bottom.gbr  PowerBoard_soldermask_top.gbr
Raspberry Pi/: angular.json  build.xml  nbactions.xml  package-lock.json  package.json  pom.xml
Raspberry Pi/src/main/angular/: index.html  polyfills.ts  styles.scss
Raspberry Pi/src/main/angular/app/: JoyStickControl.ts  JoystickControl.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  pi.service.ts
Raspberry Pi/src/main/java/ru/tsirkunov/afelbot/: AfelBotMain.java  ControlRestController.java  DaguMiniDriverComm.java  JoystickControl.java  LastElementQueue.java  MainMotorPower.java  MotorDriver.java  NullMotorDriver.java
Raspberry Pi/src/main/java/ru/tsirkunov/afelbot/dagu/: DaguMiniDriverComm.java
Raspberry Pi/src/main/resources/ru/tsirkunov/afelbot/: index.xhtml  style.css
Raspberry Pi/src/main/resources/static/: index.xhtml
src/main/java/ru/tsirkunov/afelbot/: AfelBotMain.java
